--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -14,18 +14,41 @@
             {{ encore_entry_script_tags('app') }}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
     </head>
-    <header class="site-header" style="background-image: url({{ asset('img/background.jpg') }})">
+    <header class="site-header" >
     <span class="site-title">My Symfony Site</span>
 </header>
     <body>
-    <nav>
-    <ul>
-        <li><a href="{{ path('home') }}">Home</a></li>
-        <li><a href="{{ path('about') }}">About</a></li>
-        <li><a href="{{ path('report') }}">Report</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="{{ path('home') }}">MVC course - BTH</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('about') }}">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('report') }}">Report</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('lucky_number') }}">Lucky number</a>
+            </li>
+        </ul>
+    </div>
 </nav>
+
         {% block body %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     </body>
 </html>
