--- a/app/templates/report.html.twig
+++ b/app/templates/report.html.twig
@@ -3,5 +3,30 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <h1>Home</h1>
+  <div class="container">
+    <h1>Redovising - kursmoment</h1>
+   <p>Här samlar jag mina redovisningstexter...</p>
+    <p><a href="#kmom01">Kmom01</a></p>
+    <p><a href="#kmom02">Kmom02</a></p>
+    <p><a href="#kmom03">Kmom03</a></p>
+    <p><a href="#kmom04">Kmom04</a></p>
+    <p><a href="#kmom05">Kmom05</a></p>
+    <p><a href="#kmom06">Kmom06</a></p>
+    <p><a href="#kmom07">Kmom07</a></p>
+    <h2 id="kmom01">Kursmoment 1</h2>
+    <p>Här är redovisningstexten för Kmom01...</p>
+    <h2 id="kmom02">Kursmoment 2</h2>
+    <p>Här är redovisningstexten för Kmom02...</p>
+    <h2 id="kmom03">Kursmoment 3</h2>
+    <p>Här är redovisningstexten för Kmom03...</p>
+    <h2 id="kmom04">Kursmoment 4</h2>
+    <p>Här är redovisningstexten för Kmom04...</p>
+    <h2 id="kmom05">Kursmoment 5</h2>
+    <p>Här är redovisningstexten för Kmom05..</p>
+    <h2 id="kmom06">Kursmoment 6</h2>
+    <p>Här är redovisningstexten för Kmom06...</p>
+    <h2 id="kmom07">Kursmoment 7</h2>
+    <p>Här är redovisningstexten för Kmom07...</p>
+    </div>
+      {% include 'footer.html.twig' %}
 {% endblock %}
