--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -3,13 +3,22 @@
 {% block title %}Home{% endblock %}
 
     {% block body %}
+        <div class="container">
+        <div class="row">
     <h1>Presentation</h1>
     <p>My name is Alexandra Berivoe and I am 40 years old, born and raised in Romania. In 2009 I have moved to Sweden with a job opportunity and I have stayed and built a family and life here, in Stockholm, where I live with my 2 children, age 10 and 8.
 I enjoy problem solving a lot and that is what drives me to study webbprogrammering and hope to work with that in the future.
 Outside hanging out with my children, I enjoy going to Yoga classes, reading and listening to music.
 </p>
 <p>Talk soon!</p>
-    <a href="{{ asset('img/me.jpg') }}">
-        <img src="{{ asset('img/me.jpg') }}" alt="">
-    </a>
+</div>
+    <div class="row">
+<div class="col" style="height: 60vh;">
+    <img id='me' src="{{ asset('img/me.jpg') }}" alt="" class="img-fluid">
+</div>
+
+    </div>
+    </div>
+      {% include 'footer.html.twig' %}
 {% endblock %}
+
